--- a/css/main-style.css
+++ b/css/main-style.css
@@ -72,4 +72,30 @@ body{
     background-color: var(--text-green-color);
     padding: 15px 25px;
     border-radius: 160px;
+    font-size: 16px;
+    line-height: 21px;
+}
+
+/* Bottom header  */
+
+.bottom__header{
+    display: flex;
+    padding: 0 85px 0 130px;
+    color: var(--text-white-color);
+}
+.header__description{
+    margin: 80px auto auto;
+}
+
+.caption{
+    font-size: 48px;
+    line-height: 65px;  
+}
+
+.paragraph{
+    font-size: 18px;
+    line-height: 27px;
+}
+.human__image{
+    display: block;
 }
