--- a/css/main-style.css
+++ b/css/main-style.css
@@ -176,3 +176,68 @@ body{
     justify-content: space-between;
     align-items: center;
 }
+
+
+/* ADVANTAGES  */
+
+.advantages{
+    color: var(--bg-color);
+    text-align: center;
+}
+.interest{
+    margin-bottom: 80px;
+}
+
+.card__container{
+    display: flex;
+    align-items: flex-start;
+    padding: 50px 150px;
+}
+
+.interest__card{
+    width: 350px;
+    background-color: var(--ebg--color);
+    text-align: start;
+    padding: 40px 30px 50px;
+    margin-left: 40px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 20px #858484;
+}
+
+.card--caption{
+    margin: 0;
+    padding: 0;
+    line-height: 1;
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+}
+.card--caption::before{
+    background-repeat: no-repeat;
+    margin-bottom: 20px;
+}
+.caption--shield::before{
+    content: "";
+    width: 62px;
+    height: 74px;
+    background-image: url("../images/shield.svg");
+}
+.caption--star::before{
+    content: "";
+    width: 82px;
+    height: 74px;
+    background-image: url("../images/star.svg");
+}
+.caption--search::before{
+    content: "";
+    width: 82px;
+    height: 74px;
+    background-image: url("../images/search.svg");
+}
+
+.card--item{
+    line-height: 2;
+    margin-left: 20px;
+    font-size: 0.8rem;
+}
