--- a/css/main-style.css
+++ b/css/main-style.css
@@ -182,7 +182,9 @@ body{
 }
 
 
-/* ADVANTAGES  */
+/*==============================================================================
+                                    ADVANTAGES  
+ =============================================================================*/
 
 .advantages{
     color: var(--bg-color);
