--- a/css/main-style.css
+++ b/css/main-style.css
@@ -475,9 +475,11 @@ body{
     .card__container{
         flex-direction: column;
         padding: 20px;
+        align-items: center;
     }
     .interest__card{
         width: 70vw;
+        margin-left: 0;
     }
 
     .help{
