card box shadow

--- a/css/main-style.css
+++ b/css/main-style.css
@@ -207,7 +207,7 @@ body{
     padding: 40px 30px 50px;
     margin-left: 40px;
     border-radius: 10px;
-    box-shadow: 5px 5px 20px #858484;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 .card--caption{
