--- a/css/main-style.css
+++ b/css/main-style.css
@@ -207,7 +207,7 @@ body{
     padding: 40px 30px 50px;
     margin-left: 40px;
     border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 .card--caption{
