--- a/css/main-style.css
+++ b/css/main-style.css
@@ -428,7 +428,7 @@ body{
 
     /*==================================================================*/
     .hr__invitation{
-        margin: 0 20px;
+        padding: 0 20px;
         flex-direction: column;
     }
 
