--- a/css/main-style.css
+++ b/css/main-style.css
@@ -430,6 +430,7 @@ body{
     .hr__invitation{
         padding: 0 40px;
         flex-direction: column;
+        margin: 0;
     }
 
     .hr__invitation--second{
