--- a/css/main-style.css
+++ b/css/main-style.css
@@ -425,6 +425,9 @@ body{
         width: 90vw;
         height: 80%;
     }
+    .caption{
+        font-size: 35px;
+    }
 
     /*==================================================================*/
     .hr__invitation{
